--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Tall Ships</strong> 2017<span></span></a>
+						<a href="index.html" class="logo"><strong>Tall Ships</strong> 2020<span></span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -65,8 +65,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Ship #1</a></h3>
+										<p>Description #1</p>
 									</header>
 								</article>
 								<article>
@@ -74,8 +74,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Ship #2</a></h3>
+										<p>Description #2</p>
 									</header>
 								</article>
 								<article>
@@ -83,8 +83,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">Ship #3</a></h3>
+										<p>Description #3</p>
 									</header>
 								</article>
 								<article>
@@ -92,8 +92,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">Ship #4</a></h3>
+										<p>Description #4</p>
 									</header>
 								</article>
 								<article>
@@ -101,8 +101,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Ship #5</a></h3>
+										<p>Description #5</p>
 									</header>
 								</article>
 								<article>
@@ -110,8 +110,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Ship #6</a></h3>
+										<p>Description #6</p>
 									</header>
 								</article>
 							</section>
